Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -390,7 +390,7 @@
    "outputs": [],
    "source": [
     "def get_mean(data):\n",
-    "    c\n",
+    "    count = \n",
     "\n",
     "    mean = \n",
     "    \n",
