Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -390,7 +390,9 @@
    "outputs": [],
    "source": [
     "def get_mean(data):\n",
-    "    count = \n",
+    "    count = 0\n",
+    "    for i in data:\n",
+    "        \n",
     "\n",
     "    mean = \n",
     "    \n",
