--- a/index.ipynb
+++ b/index.ipynb
@@ -392,7 +392,7 @@
     "def get_mean(data):\n",
     "    count = 0\n",
     "    for i in data:\n",
-    "        \n",
+    "        count += 1\n",
     "\n",
     "    mean = \n",
     "    \n",
