--- a/index.ipynb
+++ b/index.ipynb
@@ -414,7 +414,8 @@
     "test1 = [5, 4, 1, 3, 2]\n",
     "test2 = [4, 2, 3, 1]\n",
     "\n",
-    "print(get_mean(test1)) # 3\n",
+    "print(get_mean(test1))\n",
+    "# 3\n",
     "print(get_mean(test2)) # 2.5"
    ]
   },
