--- a/index.ipynb
+++ b/index.ipynb
@@ -407,7 +407,7 @@
     "    for i in data:\n",
     "        count += i\n",
     "\n",
-    "    mean = round(count/len(data,2))\n",
+    "    mean = round(count/len(data))\n",
     "    \n",
     "    return round(mean,2)\n",
     "\n",
